--- a/frontTCinema/src/app/profile/profile.component.html
+++ b/frontTCinema/src/app/profile/profile.component.html
@@ -1,3 +1,37 @@
-<p>
-  profile works!
-</p>
+<div class="container">
+  <h2 class="page-header text-center">Profile</h2>
+  <br>
+  <div *ngIf="user">
+    <div class="container">
+      <div class="jumbotron">
+        <div class="row">
+          <div class="col-md-4 col-xs-12 col-sm-6 col-lg-4">
+            <img src="https://www.svgimages.com/svg-image/s5/man-passportsize-silhouette-icon-256x256.png" alt="stack photo" class="img">
+          </div>
+          <div class="col-md-8 col-xs-12 col-sm-6 col-lg-8">
+            <div class="container" style="border-bottom:1px solid black">
+              <h1 class="text-center">{{user.firstName}} {{user.lastName}}</h1>
+            </div>
+            <hr>
+            <ul class="container details">
+              <li>
+                <p>
+                  <span class="glyphicon glyphicon-earphone one" style="width:50px;"></span>{{user.phoneNumber}}</p>
+              </li>
+              <li>
+                <p>
+                  <span class="glyphicon glyphicon-envelope one" style="width:50px;"></span>{{user.email}}</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <br>
+      <br>
+      <h2 class="page-header text-center">Reservation History</h2>
+
+      <app-user-reservation-history></app-user-reservation-history>
+
+
+    </div>
+  </div>
