--- a/frontTCinema/src/app/register/register.component.html
+++ b/frontTCinema/src/app/register/register.component.html
@@ -25,5 +25,5 @@
       <input type="password" [(ngModel)]="repeatPassword" name="repeatPassword" class="form-control">
     </div>
     <br>
-    <input class="btn btn-primary" type="submit" value="Submit">
+    <input class="btn btn-block btn-primary" type="submit" value="Submit">
 </form>
