--- a/frontTCinema/src/app/components/home/home.component.html
+++ b/frontTCinema/src/app/components/home/home.component.html
@@ -1,3 +1,59 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <div class="row center">
+    <div class="" *ngFor="let date of datesList">
+      <button class="btn btn-primary margin-right" (click)="filterSeancesByDate(date)">{{date | date:short}}</button>
+    </div>
+  </div>
+  <table *ngIf="seances" class="table table-striped table-dark">
+    <thead>
+      <tr>
+        <th style="width: 30%;" scope="col">Title</th>
+        <th style="width: 70%;" scope="col">Hours</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let seance of filteredSeances">
+        <th scope="row">{{seance.movie}}</th>
+        <td><button style="margin-right:5px;" (click)="seanceSeatsInfo(seance, date)" *ngFor="let date of seance.dates"
+            class="btn btn-primary">{{date | date: 'HH:mm'}}</button></td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="seatsInfo" *ngIf="chosenSeance">
+    <div class="screen">
+      <p style="font-size: 50px;">SCREEN</p>
+    </div>
+    <div class="container">
+
+      <button class=" btn seatButton" [ngClass]="{seatButtonReserved: seat.isReserved, seatButtonChosen: !seat.isReserved && seat.isPreReserved, seatButtonNormal: !seat.isReserved && !seat.isPreReserved }"
+        [ngStyle]="{'width': seatButtonWidth()}" (click)="addSeatToReservationList(seat)" *ngFor="let seat of chosenSeanceSeats">
+        {{seat.column}}
+      </button>
+    </div>
+    <div class="reservationList" *ngIf="reservationSeatsList.length">
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputFirstName">First Name</label>
+            <input [(ngModel)]="inputPersonInformation.firstName" name="firstname" type="text" class="form-control" id="inputFirstName" placeholder="First Name">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputLastName">Last Name</label>
+            <input [(ngModel)]="inputPersonInformation.lastName" name="lastname" type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputPhoneNumber">Phone Number</label>
+          <input [(ngModel)]="inputPersonInformation.phoneNumber" name="phonenumber" type="text" class="form-control" id="inputPhoneNumber" placeholder="732 239 505">
+        </div>
+        <div class="form-group">
+          <label for="inputEmailAddress">Email Address</label>
+          <input [(ngModel)]="inputPersonInformation.email" name="email" type="email" class="form-control" id="inputEmailAddress" placeholder="johncena357@gmail.com">
+        </div>
+        <button (click)="lognijmicos()" type="submit" class="btn btn-primary">Sign in</button>
+        <p>Chosen Seats:</p><br>
+        <span *ngFor="let seat of reservationSeatsList"> row: {{seat.row}}, column: {{seat.column}} </span>
+      </form>
+    </div>
+  </div>
+</div>
