--- a/frontTCinema/src/app/components/success/success.component.html
+++ b/frontTCinema/src/app/components/success/success.component.html
@@ -1,4 +1,4 @@
-<div class="successReservation border border-success rounded">
+<div class="successReservation">
     <h2> Success, reservation process has been completed!</h2>
-    <button class="btn btn-success" routerLink="/home">Back to main page</button>
+    <button class="btn btn-success btn-block" (click)="goHome()">Back to main page</button>
 </div>
