--- a/frontTCinema/src/styles.css
+++ b/frontTCinema/src/styles.css
@@ -1,9 +1,17 @@
 html {
     position: relative;
     min-height: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
+    
 }
 
 body {
+    width: 100%;
+    height: 100vh;
     margin: 0 0 100px;
-    /* bottom = footer height */
+    background-image: linear-gradient(rgba(255,255,255,0.6), rgba(255,255,255,0.1)), url('./assets/bg.jpg');
+    background-size: cover;
+    opacity: 0.95;
 }
+
