--- a/frontTCinema/src/app/components/success/success.component.html
+++ b/frontTCinema/src/app/components/success/success.component.html
@@ -1,4 +1,7 @@
-<div class="successReservation">
-    <h2> Success, reservation process has been completed!</h2>
-    <button class="btn btn-success btn-block" (click)="goHome()">Back to main page</button>
+<div class="container">
+
+    <div class="successReservation">
+        <h2> Success, reservation process has been completed!</h2>
+        <h4>Don't forget to went 30 minutes before seance starts and buy your tickets, otherwise your reservation will be cancelled</h4>
+    </div>
 </div>
