--- a/frontTCinema/src/app/components/admin-panel/admin-panel.component.css
+++ b/frontTCinema/src/app/components/admin-panel/admin-panel.component.css
@@ -1,3 +1,40 @@
 .removeButton:hover {
     background-color: red !important;
 }
+#movie {
+
+    background-color: rgba(10, 194, 132, 0.371);
+	-webkit-box-shadow: 0 7px 4px #777;
+	-moz-box-shadow: 0 7px 4px #777;
+    box-shadow: 0 7px 4px #777;
+}
+#room {
+
+    background-color: rgba(10, 173, 194, 0.371);
+	-webkit-box-shadow: 0 7px 4px #777;
+	-moz-box-shadow: 0 7px 4px #777;
+    box-shadow: 0 7px 4px #777;
+}
+#seance {
+    position: relative;
+    background-color: rgba(10, 194, 132, 0.371);
+	-webkit-box-shadow: 0 7px 4px #777;
+	-moz-box-shadow: 0 7px 4px #777;
+    box-shadow: 0 7px 4px #777;
+    margin-bottom: 30px;
+}
+
+.pad-top {
+    margin-top: 30px;
+}
+.tablediv {
+    padding-top: 1px;
+}
+
+.container {
+    margin-top: 40px;
+}
+.btn-def {
+    margin-bottom: 25px;
+    width: 100%;
+}
