--- a/frontTCinema/src/app/components/reservation-person-info/reservation-person-info.component.html
+++ b/frontTCinema/src/app/components/reservation-person-info/reservation-person-info.component.html
@@ -1,28 +1,35 @@
-<form *ngIf="!success;else reservationDone">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputFirstName">First Name</label>
-      <input [(ngModel)]="inputPersonInformation.firstName" name="firstname" type="text" class="form-control" id="inputFirstName"
+<div class="shadows container" *ngIf="!success;else reservationDone">
+    <div style="height: 20px;"></div>
+
+  <form >
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputFirstName">First Name</label>
+        <input [(ngModel)]="inputPersonInformation.firstName" name="firstname" type="text" class="form-control" id="inputFirstName"
         placeholder="First Name">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputLastName">Last Name</label>
-      <input [(ngModel)]="inputPersonInformation.lastName" name="lastname" type="text" class="form-control" id="inputLastName"
+      </div>
+      <div class="form-group col-md-6">
+        <label for="inputLastName">Last Name</label>
+        <input [(ngModel)]="inputPersonInformation.lastName" name="lastname" type="text" class="form-control" id="inputLastName"
         placeholder="Last Name">
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <label for="inputPhoneNumber">Phone Number</label>
-    <input [(ngModel)]="inputPersonInformation.phoneNumber" name="phonenumber" type="text" class="form-control" id="inputPhoneNumber"
+    <div class="form-group">
+      <label for="inputPhoneNumber">Phone Number</label>
+      <input [(ngModel)]="inputPersonInformation.phoneNumber" name="phonenumber" type="text" class="form-control" id="inputPhoneNumber"
       placeholder="732 239 505">
-  </div>
-  <div class="form-group">
-    <label for="inputEmailAddress">Email Address</label>
-    <input [(ngModel)]="inputPersonInformation.email" name="email" type="email" class="form-control" id="inputEmailAddress"
-      placeholder="johncena357@gmail.com">
-  </div>
-  <button (click)="submitReservation()"  class="btn btn-primary btn-block">Submit Reservation</button>
-</form>
+    </div>
+    <div class="form-group">
+      <label for="inputEmailAddress">Email Address</label>
+      <input [(ngModel)]="inputPersonInformation.email" name="email" type="email" class="form-control" id="inputEmailAddress"
+      placeholder="marryjane357@gmail.com">
+    </div>
+
+    <button style="margin-bottom: 10px" (click)="submitReservation()"  class="btn btn-primary btn-block">Submit Reservation</button>
+    <div style="height: 20px;"></div>
+
+  </form>
+</div>
 <ng-template  #reservationDone >
   <app-success></app-success>
 </ng-template>
