--- a/frontTCinema/src/app/components/success/success.component.css
+++ b/frontTCinema/src/app/components/success/success.component.css
@@ -1,3 +1,16 @@
-.successReservation{
+.container {
+    padding-top: 100px;
     text-align: center;
+    display: table;
+    
+}
+.successReservation{
+    padding: 30px 0 30px 0;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    background-color: rgba(10, 173, 194, 0.471);
+    -webkit-box-shadow: -7px 12px 33px 2px rgba(5,205,255,0.83);
+    -moz-box-shadow: -7px 12px 33px 2px rgba(5,205,255,0.83);
+    box-shadow: -7px 12px 33px 2px rgba(5,205,255,0.83);
 }
