--- a/frontTCinema/src/styles.css
+++ b/frontTCinema/src/styles.css
@@ -1,17 +1,53 @@
 html {
-    position: relative;
-    min-height: 100%;
-    min-width: 100vw;
+    width: 100%;
     min-height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    margin: 0;
+    padding: 0;
     
 }
 
 body {
     width: 100%;
-    height: 100vh;
-    margin: 0 0 100px;
-    background-image: linear-gradient(rgba(255,255,255,0.6), rgba(255,255,255,0.1)), url('./assets/bg.jpg');
-    background-size: cover;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    /* background-image:  url('./assets/bg.jpg'); */
     opacity: 0.95;
 }
 
+.box-shadow--4dp {
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .2)
+}
+
+.x-scroller {
+    float: none;
+    overflow-x: auto;
+    overflow-y: hidden;
+    display: -webkit-box;
+}
+
+ table{
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: transparent;
+}
+
+::-webkit-scrollbar
+{
+    margin-top:5px;
+	width: 12px;
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb
+{
+	background-color: #494949;
+}
