--- a/frontTCinema/src/app/components/home/home.component.css
+++ b/frontTCinema/src/app/components/home/home.component.css
@@ -10,8 +10,8 @@
     width: 100%;
     height: 100%;
     background: #000000;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #000000, #000000);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #000000, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to bottom,#000000,#000000,#000000, #757575);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient( to bottom,#000000,#000000, #000000, #757575); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
 }
 .container {
