--- a/frontTCinema/src/styles.css
+++ b/frontTCinema/src/styles.css
@@ -1,9 +1,9 @@
 html {
     width: 100%;
     min-height: 100vh;
-    background-color: rgba(0, 0, 0, 0.7);
     margin: 0;
     padding: 0;
+    background-color: rgba(49, 49, 49, 0.6) ;
     
 }
 
@@ -12,7 +12,7 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    /* background-image:  url('./assets/bg.jpg'); */
+    background-color: rgba(49, 49, 49, 0.6)!important;
     opacity: 0.95;
 }
 
